Fixed simulator layout as it would move out of place when the tutorial reached its step

--- a/SkillCourtV3/css/wizard.css
+++ b/SkillCourtV3/css/wizard.css
@@ -1,7 +1,7 @@
 #Simulator
 {
-	display: inline-block ;
-	top: 100px ;
+	display: relative ;
+	top: 0px ;
 	width: 600px ;
 	min-width: 600px ;
 	height:600px ;
